<resources>
    <string name="app_name">Project Management</string>
    <string name="on_going">On Going</string>
    <string name="status_todo">Cần làm</string>
    <string name="status_in_progress">Đang làm</string>
    <string name="status_done">Hoàn thành </string>
    <string name="status_in_review">Đang nhận xét</string>
    <string name="task_details_title">Task Details</string>
    <string name="label_project">Project: %1$s</string>
    <string name="label_access">Quyền truy cập: %1$s</string>
    <string name="access_private">Riêng tư</string>
    <string name="access_public">Công khai</string>
    <string name="label_deadline">Deadline: %1$s</string>
    <string name="label_owner">Owner: %1$s</string>
    <string name="label_description">Description: %1$s</string>
    <string name="progress_format">%1$d / %2$d</string>
    <string name="empty_description">(không có)</string>
    <string name="assignee_name_placeholder">Name</string>
    <string name="assignees_label">Assignees</string>
    <string name="task_title_hint">Task title</string>
    <string name="task_desc_hint">Description</string>
    <string name="pick_due_date">Pick Due Date</string>
    <string name="create_task">Create Task</string>
    <string name="deadline_placeholder">Deadline 12 Okt 2023</string>
    <string name="progress_placeholder">0 / 10</string>
    <string name="tab_task">Task</string>
    <string name="tab_process">Process</string>
    <string name="tab_completed">Completed</string>
    <string name="tab_information">Information</string>
    <string name="fab_create_task_desc">Tạo mới</string>
    <string name="progress_count_placeholder">0/0</string>
    <string name="inform_label">Inform</string>
    <!-- res/values/strings.xml -->
    <string name="task_filter_prompt">Lọc trạng thái</string>
    <string name="no_tasks_found">Không có công việc nào</string>

    <!-- res/values/arrays.xml -->
    <string-array name="task_status_filter_labels">
        <item>Tất cả</item><item>Chờ làm</item><item>Đang làm</item><item>Chờ duyệt</item><item>Hoàn thành</item>
    </string-array>
    <string-array name="task_status_filter_values">
        <item></item><item>TODO</item><item>IN_PROGRESS</item><item>IN_REVIEW</item><item>DONE</item>
    </string-array>
</resources>